# crawler

./: .gitignore  README.md
backend/: Dockerfile  Pipfile  docker-compose.yml  env-example.env  manage.py  pyproject.toml  pytest.ini
backend/core/: __init__.py  api.py  utils.py
backend/crawler/api/: __init__.py  link_api.py  task_api.py
backend/crawler/migrations/: 0001_initial.py
backend/crawler/models/: __init__.py  link.py  task.py
backend/crawler/services/: __init__.py  collector.py
backend/crawler/tasks/: __init__.py  collect_task.py
backend/crawler/tests/: robots.txt  test_api.py  test_parser.py  wiki_page.html
backend/optifino/: asgi.py  celery.py  fastapi_app.py  wsgi.py
backend/optifino/settings/: __init__.py  base.py  celery.py  logging.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/components/: CrawlerPage.js  LinkList.js
