[tool.poetry]
name = "optifino-backend"
version = "0.1.0"
description = ""
authors = ["mike.lazko <tanzorrteam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "*"
uvicorn = "*"
pydantic = "*"
celery = "*"
dj-database-url = "*"
beautifulsoup4 = "*"
requests = "*"
redis = "*"
robotexclusionrulesparser = "*"
slowapi = "*"
fastapi = { extras = ["all"], version = "*" }
psycopg2-binary = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
httpx = "*"
pytest-django = "*"
requests-mock = { extras = ["fixture"], version = "*" }
coverage = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
